# dobre-vychovana-hra

./: .gitignore  pyproject.toml
dobre_vychovana_hra/: __init__.py  babicka_dozorce.py  exceptions.py
tests/: test_vychovanosti.py
